Nov 20, 2003

  * FIXED: Avoid the use of typed nodes if the type-resource cannot be
    expressed as an XML name.

  * FIXED: non-determinism in rdf_node/1 and rdf_bnode/1.

Nov 17, 2003

  * FIXED: rdfs_subclass_of/2 to make all classes a subclass of rdfs:'Class'.

  * FIXED: rdf_save/[1,2] to handle XML escapes `value'
    in rdf:resource="value".

  * ADDED: rdf_bnode/1 to generate a blank node identifier as __bnode<N>

  * ADDED: rdfs_assert_list/2 to create an rdf list from resources.

Nov 7, 2003

  * ADDED: Allows rdf_load/[1,2] to process a stream.  Maarten Menken.

Oct 27, 2003

  * ADDED: installation of owl.owl. 

Oct 16, 2003

  * MODIFIED: Add source-file to MD5 computation for triples to make it
    possible to locate the journal snapshot using the MD5.

  * FIXED: Added replay of rdfe_unload/1.

Oct 9, 2003

  * MODIFIED: rdf_md5/2 returns a null-digest for an empty source.

Oct 7, 2003

  * FIXED: rdf_update/[4,5].  Duplicate administration error.

  * MODIFIED: rdfs_label(+Resource, -Label) first returns labels registered
    with rdfs:label and only afterwards with sub-properties thereof.

Oct 6, 2003

  * MODIFIED: rdfs_individual_of(Resource, Class) implicitely assumes all
    resources belong to rdfs:Resource and literal(_) belongs to rdfs:Literal.

Oct 1, 2003

  * MODIFIED: XSD namespace declaration in rdf_db.pl to 
    http://www.w3.org/2001/XMLSchema#

Sep 30, 2003

  * FIXED: rdfs_find: every class is supposed to be a subclass of
    rdfs:Resource.  Cleanup of comment

Sep 29, 2003

  * ENHANCED: Store and reload MD5 using rdf_save_db and rdf_load_db for
    speedup of loading and (possible now) verify the integrety of a quick
    load triple file.

Sep 27, 2003

  * ADDED: 1st version of MD5 digest from loaded sources

Sep 24, 2003

  * ADDED: internal administration of triples associated with each source.
    Prolog based counting at the end if either very slow or not thread-safe.

Sep 23, 2003
